Fix team button spacing

--- a/src/styles/pages/sites/[site_id]/_team.scss
+++ b/src/styles/pages/sites/[site_id]/_team.scss
@@ -50,7 +50,7 @@
 
   .invite-member {
     display: inline-block;
-    margin: 0 0 2rem 0;
+    margin: 2rem 0;
   }
 
   .roles {
